# MindRef

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  README.rst  buildozer.spec  mypy.ini  pyproject.toml  requirements.txt  setup.py
.run/: All Tests.run.xml  Color Convert.run.xml  KVNoteAFly - DEBUG.run.xml  KVNoteAFly - Phone Landscape.run.xml  KVNoteAFly - Screen.run.xml  KVNoteAFly - WebDebug.run.xml  KVNoteAFly.run.xml  KivyCatalog.run.xml  Make Textures.run.xml  MindRef - DEBUG.run.xml  MindRef - Phone Landscape.run.xml  MindRef - WebDebug.run.xml  MindRef.run.xml  Pack Category Atlas.run.xml  Pack Category.run.xml  Pack Icons.run.xml  Pack Texture.run.xml  Showcase.run.xml  Test Registry.run.xml  Unpack Atlas.run.xml  Unpack Icons.run.xml  Unpack Keys Atlas.run.xml  Unpack Texture.run.xml
atlas_utils/: atlas.py  pack.py  unpack.py
custom/: code.kv  code.py  note.py  rst.py
custom/markdown/: markdown_document.py  markdown_heading.kv
custom/markdown/list/: markdown_list.kv  markdown_list_item.py
db/: models.py  noteafly.db
db/scripts/: __init__.py
kvnoteafly/: main.py  noteafly.kv  noteafly.py
kvnoteafly/adapters/editor/: editor_repository.py
kvnoteafly/adapters/notes/: note_repository.py
kvnoteafly/custom/: buttons.py  chooser.py  code.py  keyboard.py  note.py  rst.kv  rst.py  screens.kv  screens.py  scroller.py
kvnoteafly/custom/markdown/: markdown_document.kv  markdown_document.py
kvnoteafly/db/: models.py  noteafly.db
kvnoteafly/db/scripts/: __init__.py
kvnoteafly/domain/: editable.py  events.py  parser.py  plugin_settings.py  protocols.py  settings.py
kvnoteafly/plugins/: __init__.py
kvnoteafly/registry/: __init__.py  protocol.py  topic.py
kvnoteafly/service/: __init__.py  registry.py
kvnoteafly/services/: utils.py
kvnoteafly/services/atlas/: __init__.py  atlas.py
kvnoteafly/services/backend/: __init__.py  fileBackend.py  utils.py
kvnoteafly/services/domain/: __init__.py  md_parser_types.py  parser.py
kvnoteafly/services/editor/: __init__.py
kvnoteafly/services/settings/: __init__.py  behavior.json  display.json  settings.json
kvnoteafly/static/category_icons/: category-img.atlas
kvnoteafly/static/icons/: icons.atlas
kvnoteafly/static/keys/: keys.atlas
kvnoteafly/static/textures/: textures.atlas
kvnoteafly/utils/: __init__.py  triggers.py
kvnoteafly/utils/caching/: __init__.py
kvnoteafly/utils/registry/: __init__.py
kvnoteafly/widgets/: __init__.py  app_menu.kv  app_menu.py  behavior.kv  behavior.py  buttons.kv  buttons.py  categories.kv  categories.py  chooser.kv  chooser.py  keyboard.kv  keyboard.py  mixins.py  note.kv  note.py  screens.kv  screens.py  scroller.kv  scroller.py  separator.kv  separator.py  settings_panel.py  style.kv  style.py  toolbar.kv
kvnoteafly/widgets/behavior/: inline_behavior.kv  inline_behavior.py  interact_behavior.py  label_behavior.py
kvnoteafly/widgets/buttons/: button_bar.kv  button_bar.py  buttons.kv  buttons.py
kvnoteafly/widgets/editor/: editor.kv  editor.py
kvnoteafly/widgets/effects/: __init__.py  pulsing.py  scrolling.kv  scrolling.py  spinning.py
kvnoteafly/widgets/markdown/: markdown_block.kv  markdown_block.py  markdown_document.kv  markdown_document.py  markdown_heading.py  markdown_interceptor.py  markdown_visitor.py
makefiles/: aar.mk  apk.mk  prebuild.mk  vars.mk
mindref/: app.py  main.py  mindref.kv  mindref.py
mindref/adapters/: __init__.py
mindref/adapters/atlas/: atlas_repository.py
mindref/adapters/editor/: editor_repository.py
mindref/adapters/notes/: note_repository.py
mindref/domain/: editable.py  events.py  markdown_note.py  md_parser_types.py  note_resource.py  plugin_settings.py  protocols.py  settings.py
mindref/domain/parser/: kbd_plugin.py  markdown_parser.py
mindref/domain/settings/: storage.json
mindref/lib/domain/: editable.py  events.py  note_resource.py  plugin_settings.py  protocols.py  settings.py
mindref/lib/plugins/: __init__.py
mindref/lib/service/: registry.py  uow.py
mindref/lib/utils/: __init__.py  calculation.c  calculation.pyx  index.c  index.pyx
mindref/lib/widgets/: categories.kv  categories.py  note.kv  note.py  style.kv  style.py  toolbar.kv
mindref/plugins/: __init__.py
mindref/service/: registry.py  uow.py
mindref/static/icons/: icons.atlas
mindref/static/keys/: keys.atlas
mindref/static/textures/: textures.atlas
mindref/utils/: __init__.py  calculation.pyx  index.pxd  index.py  index.pyx  triggers.py
mindref/utils/caching/: __init__.py
mindref/widgets/: __init__.py  app_menu.kv  app_menu.py  categories.kv  categories.py  keyboard.kv  mixins.py  note.kv  note.py  screens.kv  screens.py  scroller.kv  scroller.py  separator.py  settings_panel.py  style.kv  style.py  toolbar.kv  toolbar.py
mindref/widgets/app_menu/: app_menu.kv  app_menu.py
mindref/widgets/behavior/: gesture_rec_behavior.py  gestures.py  inline_behavior.kv  inline_behavior.py  refresh_behavior.py
mindref/widgets/box_model/: border.kv  border.py  box_model.kv  box_model.py  margin.kv  margin.py  padding.py
mindref/widgets/buttons/: button_bar.kv  button_bar.py  buttons.kv  buttons.py  category.kv  category.py  (+2 more)
p4a-recipes/mindref_android/: MANIFEST.in  __init__.py  setup.py
p4a-recipes/mindref_cython/: __init__.py
p4a-recipes/utils/: __init__.py
pi_screen/: backlight.py
scripts/: box_model_demo.py  build.sh  color_convert.py  db_to_files.py  keyboard_demo.py  layout_demo.py  make_texture.py
scripts/live/: live_reload.kv  live_reload.py
scripts/patches/: app.patch  apply_patches.sh  filechooser.patch  flatDirs.patch  pathlib.patch
src/mindref/: app.py  main.py
stubs/android/: permissions.pyi  storage.pyi
tests/: conftest.py  pytest.ini  pytests.ini
tests/algorithms/: test_list_unpacking.py
tests/plugins/: conftest.py  test_pi_screensaver.py
tests/registry/: conftest.py  test_registry.py
tests/services/: conftest.py  test_atlas_service.py  test_fileBackend.py  test_index.py
tests/typeahead/: test_deque_bisect.py
tests/utils/: test_index.py
(+297 files in other folders)
