[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "MindRef"
version = "0.4.3"
description = "Cross-Platform Application for maintaining Markdown formatted notes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LGPLv3+" }
authors = [
    { name = "Eric Stasney", email = "estasney@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]
urls = { "Homepage" = "https://github.com/estasney/MindRef" }

dependencies = [
    "Kivy==2.3.*",
    "mistune==2.0.5",
    "pillow<11.1.0",
    "Pygments==2.19.0",
    "python-dotenv==1.0.1",
    "toolz==1.0.0",
]

[project.optional-dependencies]
android = [
    "pyjnius==1.6.1",
    "python-for-android",
]


[project.scripts]
mindref = "mindref.main:main"

[tool.setuptools]
ext-modules = [
    { name = "mindref.lib.ext.ext", sources = ["src/mindref/lib/ext/ext.c"] }
]

[tool.uv]
package = true
dev-dependencies = [
    "click>=8.1.8",
    "line-profiler>=4.1.3",
    "pip>=24.3.1",
    "pyright>=1.1.389",
    "ruff>=0.8.1",
    "setuptools>=75.6.0",
    "typing-extensions>=4.12.2",
    "Cython>3.0,<=3.0.11",
    "pre-commit>=4.0.1",
]

[tool.uv.sources]
python-for-android = { path = "../python-for-android", editable = true }

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001", "UP", "ANN", "B", "C", "I", "LOG", "G", "RSE", "RET", "SLOT", "SIM", "TC", "INT", "ARG",
    "PTH", "ERA", "PL", "TRY", "FLY", "RUF", "FA"]
ignore = ["ANN401", "ANN204", "ANN201", "ANN202", "ARG002", "TRY003", "C901", "PLR0915", "PLR0912", "PLR0911"]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-dummy-args = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
